--- a/cart.html
+++ b/cart.html
@@ -5,73 +5,86 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotted Pig Farm</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#07d5d5">
-    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
-    <!-- Header -->
-    <header>
-        <div class="contentWrapper">
-            <nav>
-                <ul>
-                    <li><a href="index.html" alt="Home">Home</a></li>
-                    <li><a href="about.html" alt="About">About</a></li>
-                    <li><a href="contact.html" alt="Contact">Contact</a></a></li>
-                    <li><a href="index.html" alt="Store">Store</a></li>
-                    <li><a href="#" alt="Cart">Cart<img src="assets/cart.png" alt="Shopping Cart" class="cartIcon"></a>
-                    </li>
-                </ul>
+    <div class="container">
+        <header class="container">
+            <nav id="navbar" class="navbar navbar-expand-sm navbar-light sticky-top" style="background: transparent;">
+                <a href="#top" class="navbar-brand"></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav" style="text-align: right">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item"><a href="index.html" class="nav-link ">Store</a></li>
+                        <li class="nav-item"><a href="cart.html" class="nav-link active">Cart<img src="assets/cart.png"
+                                    class="cart-icon"></a></li>
+                        <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+                        <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+                    </ul>
+                </div>
             </nav>
-            <img src="assets/Spotted-Pig-Farm-Logo.png" class="logoIMG">
-            <!--Navigation -->
-            <h1>Cart</h1>
-            <!-- Page Title-->
+
+            <div class="row">
+                <div class="col-lg-4 align-self-end col-sm-3">
+                    <div class="page-title container ">
+                        <h1>Cart</h1>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-3">
+                    <div class="logo">
+                        <img src="assets/Spotted-Pig-Farm-Logo.png" class="img-fluid logoIMG"></div>
+                </div>
+                <div class="col-lg-4 col-sm-3 align-self-end">
+                    <div class="social navbar justify-content-end">
+                        <ul class="nav justify-content-end">
+                            <li class="nav-item"><a href="" class="nav-link"><a href="#" class="nav-link"><img
+                                            src="assets/instagram.png" alt="" class="social-icon"></a></li>
+                            <li class="nav-item"><a href="" class="nav-link"><a href="#" class="nav-link"><img
+                                            src="assets/facebook.png" alt="" class="social-icon"></a></li>
+                            <li class="nav-item"><a href="" class="nav-link"><a href="#" class="nav-link"><img
+                                            src="assets/twitter.png" alt="" class="social-icon"></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <div class="container content">
+           <div class="empty-cart text-center">
+
+            <h2>Your cart is empty</h2>
+           </div>
+
+
         </div>
-        <!-- Social Links-->
-        <nav id="socialLinks">
-            <ul>
-                <li><a href="https://www.facebook.com/spottedpigfarm" alt="Facebook"><img src="assets/facebook.png" alt="Facebook" class="socialIcon"></a>
-                </li>
-                <li><a href="https://www.instagram.com/spottedpigfarm/" alt="Instagram"><img src="assets/instagram.png" alt="Twitter" class="socialIcon"></a>
-                </li>
-                <li><a href="https://twitter.com/spottedpigfarm" alt="Twitter"><img src="assets/twitter.png" alt="Twitter" class="socialIcon"></a>
-                </li>
+        <footer class="container-fluid">
+            <!-- Legal Items, navigational items -->
+            <span>&copy;2020 Spotted Pig Farm</span>
+            <ul id="menuFooter">
+                <li><a href="#">Sitemap</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Terms of Use</a></li>
+                <li>Website by Josh</li>
             </ul>
-            <!-- </div>-->
-        </nav>
-        </div>
-    </header>
-    <!-- Main Content-->
-    <div class="content-wrapper">
-        <div class="cartEmpty">
-            <h2>Your cart is empty.</h2>
-            <br /><br /><br />
-        </div>
+        </footer>
+
+
     </div>
 
 
 
-    <!-- Footer -->
-    <div class="clear"></div>
-    <footer>
-        <!-- Legal Items, navigational items -->
-        <span>&copy;2020 Spotted Pig Farm</span>
-        <ul id="menuFooter">
-            <li><a hfre="#">Sitemap</a></li>
-            <li><a hfre="#">Privacy Policy</a></li>
-            <li><a hfre="#">Terms of Use</a></li>
-            <li>Website by Josh</li>
-        </ul>
-    </footer>
-
-
+    </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
